Pass the expected value before the actual one in JUnit assertions (java:S3415)